<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--一个TextInputLayout中有且只有一个EditText类型控件-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_unit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_unit_name_hint">

            <EditText
                android:id="@+id/tv_unit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!--一AutoCompleteTextView-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_name_hint"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!--密码明文和秘闻显示切换按钮设置passwordToggleEnabled-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true">
            <!--TextInputEditText-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_name_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_forgot_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn_forgot_register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/register"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_bottom_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF5722"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_bottom"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_fullscreen_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:backgroundTint="#795548"
            android:padding="@dimen/btn_padding"
            android:text="@string/main_dialog_fullscreen"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/bottom_navigation" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>