<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.xottys.userinterface.DialogDemo.AlertDialogFragment">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/screen"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:orientation="vertical">
            <Button android:id="@+id/two_buttons"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="双按钮普通Dialog"/>
            <Button android:id="@+id/three_buttons"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="三按钮普通Dialog"/>
            <Button android:id="@+id/text_list"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="文字列表Dialog"/>
            <Button android:id="@+id/radio_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="单选框Dialog"/>
            <Button android:id="@+id/checkbox_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="多选框Dialog"/>
            <Button android:id="@+id/progress_wheel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="进度转轮Dialog"/>
            <Button android:id="@+id/progress_bar"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="进度条Dialog"/>
            <Button android:id="@+id/text_entry"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="文本输入Dialog"/>
            <Button android:id="@+id/custom_text_entry"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="自定义文本输入Dialog"/>
            <Button android:id="@+id/two_buttons2ultra"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="超长文本Dialog"/>
            <Button android:id="@+id/two_buttons_old_school"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/alert_dialog_two_buttons_old_school"/>
            <Button android:id="@+id/two_buttons_holo_light"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/alert_dialog_two_buttons_holo_light"/>
            <Button android:id="@+id/two_buttons_default_light"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/alert_dialog_two_buttons_default_light"/>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
